# mswiki-wiz

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml
docs/: skills.md
lua/: skills.lua
src/: App.tsx  main.tsx  paths.ts  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/base/: array.ts  debounce.ts  jobs.ts  string.css  string.ts  string_tokeniser.ts
src/base/tests/: string_tokeniser.test.ts
src/components/base/: copy.ts  link.tsx
src/components/navigation/: navigation.tsx  topbar.tsx
src/components/quest/: quest_category_list.tsx  quest_context.tsx  quest_exporter.tsx  quest_list.tsx  quest_prerequisite_list.tsx  quest_util.ts
src/components/skill/: skill_context.tsx  skill_props.tsx  skill_util.ts
src/components/table/: table.tsx
src/routes/: __root.tsx  _app.tsx  index.tsx
src/routes/_app/: home.tsx  quests.tsx  skills.tsx
src/services/: item_service.ts  map_service.ts  mob_service.ts  npc_service.ts  quest_service.ts  skill_service.ts  string_service.ts  wz_reader_service.ts
src/services/wiki_api/: test_api.ts
src/transforms/: skill.ts  skill_book.ts  skill_props.ts
src/transforms/tests/: skill_props.test.ts
tauri-plugin-wz-reader/: Cargo.toml  build.rs
tauri-plugin-wz-reader/permissions/: default.toml
tauri-plugin-wz-reader/permissions/autogenerated/: reference.md
tauri-plugin-wz-reader/permissions/schemas/: schema.json
tauri-plugin-wz-reader/src/: commands.rs  desktop.rs  lib.rs  models.rs
(+23 files in other folders)
