[package]
name = "mswiki-wiz"
version = "0.1.1"
description = "MapleStory Wiki: Wiz"
authors = ["Winter"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wz_reader = "0.0.14"
tauri-plugin-wz-reader = { path = "../tauri-plugin-wz-reader" }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
